--- a/.gitignore
+++ b/.gitignore
@@ -61,5 +61,5 @@ logs/
 
 DP
 models\brain_chest_resnet152_model_state_dict.pth
-models\brain_mobilenetv2_model_state_dict.pth
-models\resnet18_chest.pth
+# models\brain_mobilenetv2_model_state_dict.pth
+# models\resnet18_chest.pth
